Update docstring format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ line-length = 88
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I", "D", "C"]
-ignore = ["E203"]        # if you prefer Black’s choices
+ignore = ["E203", "D203", "D212"]
 extend-ignore = ["D100"]         # e.g. skip missing docstring for modules
 exclude = ["build/", "docs/"]    
 per-file-ignores = { "tests/*" = ["D", "S101"] }      # relax docstring & security in tests
