--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "trophybot"
 version = "0.1.0"
@@ -10,6 +14,7 @@ python = "^3.13"
 "discord.py" = "^2.5.2"
 aiosqlite = "^0.20.0"
 python-dotenv = "^1.0"
+pynacl = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2"
