--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ packages = [{ include = "trophybot", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.13"
-"discord.py" = "^2.5.2"
 python-dotenv = "^1.0"
+flask = "^2.2.5"
 pynacl = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
