--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.13"
 python-dotenv = "^1.0"
 flask = "^2.2.5"
 pynacl = "^1.5.0"
+functions-framework = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2"
@@ -22,6 +23,7 @@ coverage = "^7.5"
 ruff = "^0.11"                    # linter/formatter
 mypy = "^1.10"
 pre-commit = "^3.7"
+gunicorn = "^20.1.0"
 
 [tool.ruff]
 line-length = 88
@@ -35,3 +37,4 @@ per-file-ignores = { "tests/*" = ["D", "S101"] }      # relax docstring & securi
 
 [tool.poetry.scripts]
 trophybot = "trophybot.bot:main"
+start = "functions_framework --target=interactions --port=$PORT"
