--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
         python -m pip install --upgrade pip
         pip install poetry
         poetry config virtualenvs.create false
-        poetry install --no-dev
+        poetry install --without dev --no-interaction
 
   # 2. Run lint & tests
   - name: "python:3.13"
