--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,7 +23,7 @@ steps:
       - |
         pip install poetry
         poetry config virtualenvs.create false
-        poetry install --without dev --no-interaction
+        poetry install --no-interaction
         poetry run ruff .
         poetry run pytest -q
 
