--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [{ include = "trophybot", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.13"
 python-dotenv = "^1.0"
-flask = "^2.2.5"
+flask = {version = "^2.2.5", extras = ["async"]}
 requests = "^2.31.0"
 pynacl = "^1.5.0"
 functions-framework = "^3.0.0"
