--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
 aiosqlite==0.20.0
+asgiref==3.8.1
 attrs==25.3.0
 blinker==1.9.0
 build==1.2.2.post1
+certifi==2025.4.26
 cffi==1.17.1
 cfgv==3.4.0
+charset-normalizer==3.4.2
 click==8.2.1
 cloudevents==1.11.1
 coverage==7.8.0
@@ -41,9 +44,11 @@ pytest==8.3.5
 pytest-asyncio==0.23.8
 python-dotenv==1.1.0
 PyYAML==6.0.2
+requests==2.32.3
 ruff==0.11.10
 setuptools==80.9.0
 typing_extensions==4.13.2
+urllib3==2.4.0
 virtualenv==20.31.2
 watchdog==6.0.0
 Werkzeug==3.1.3
